--- a/Places/Main.storyboard
+++ b/Places/Main.storyboard
@@ -4,6 +4,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
@@ -32,36 +33,39 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LIb-2R-3a1">
-                                            <rect key="frame" x="8" y="5" width="80" height="80"/>
-                                            <animations/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" secondItem="LIb-2R-3a1" secondAttribute="height" multiplier="1:1" id="A8I-cB-J4e"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A52-fm-Kgl">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A52-fm-Kgl">
                                             <rect key="frame" x="96" y="26" width="216" height="21"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dyi-hZ-vEv">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dyi-hZ-vEv">
                                             <rect key="frame" x="96" y="49" width="216" height="33"/>
                                             <animations/>
                                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LIb-2R-3a1">
+                                            <rect key="frame" x="8" y="5" width="80" height="80"/>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="LIb-2R-3a1" secondAttribute="height" multiplier="1:1" id="X7V-s7-VVx"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <animations/>
                                     <constraints>
-                                        <constraint firstItem="LIb-2R-3a1" firstAttribute="top" secondItem="i4Y-45-4ZF" secondAttribute="top" constant="5" id="7dE-pP-JsD"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="LIb-2R-3a1" secondAttribute="bottom" constant="-3" id="6CB-bJ-5Ov"/>
+                                        <constraint firstItem="Dyi-hZ-vEv" firstAttribute="leading" secondItem="LIb-2R-3a1" secondAttribute="trailing" constant="8" id="6iA-l1-wKK"/>
                                         <constraint firstAttribute="trailing" secondItem="Dyi-hZ-vEv" secondAttribute="trailing" constant="8" id="7qj-uA-cQ3"/>
-                                        <constraint firstItem="A52-fm-Kgl" firstAttribute="leading" secondItem="LIb-2R-3a1" secondAttribute="trailing" constant="8" id="RaD-uq-tHb"/>
-                                        <constraint firstItem="Dyi-hZ-vEv" firstAttribute="leading" secondItem="LIb-2R-3a1" secondAttribute="trailing" constant="8" id="aWc-91-zCn"/>
+                                        <constraint firstItem="LIb-2R-3a1" firstAttribute="top" secondItem="i4Y-45-4ZF" secondAttribute="topMargin" constant="-3" id="H2t-q5-2nZ"/>
+                                        <constraint firstItem="A52-fm-Kgl" firstAttribute="leading" secondItem="LIb-2R-3a1" secondAttribute="trailing" constant="8" id="Q5D-sG-bjM"/>
                                         <constraint firstAttribute="trailing" secondItem="A52-fm-Kgl" secondAttribute="trailing" constant="8" id="eAi-N7-I8v"/>
-                                        <constraint firstItem="LIb-2R-3a1" firstAttribute="leading" secondItem="i4Y-45-4ZF" secondAttribute="leading" constant="8" id="swY-1g-NJq"/>
+                                        <constraint firstItem="LIb-2R-3a1" firstAttribute="leading" secondItem="i4Y-45-4ZF" secondAttribute="leadingMargin" id="pqY-3s-O7i"/>
+                                        <constraint firstItem="Dyi-hZ-vEv" firstAttribute="bottom" secondItem="i4Y-45-4ZF" secondAttribute="bottomMargin" id="riC-vw-A6v"/>
+                                        <constraint firstItem="Dyi-hZ-vEv" firstAttribute="top" secondItem="A52-fm-Kgl" secondAttribute="bottom" constant="2" id="vv3-SA-YBZ"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <animations/>
